; ModuleID = '/home/carl/AnghaBench/radare2/shlr/java/extr_dsojson.c_dso_json_dict_insert_num_key_str.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/java/extr_dsojson.c_dso_json_dict_insert_num_key_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dso_json_dict_insert_num_key_str(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %10 = load i32, i32* %5, align 4
  %11 = call i32* @dso_json_str_new_from_num(i32 %10)
  store i32* %11, i32** %7, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32* @dso_json_str_new_from_str(i8* %12)
  store i32* %13, i32** %8, align 8
  %14 = load i32*, i32** %4, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %8, align 8
  %17 = call i32 @dso_json_dict_insert_key_obj(i32* %14, i32* %15, i32* %16)
  store i32 %17, i32* %9, align 4
  %18 = load i32, i32* %9, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %23, label %20

20:                                               ; preds = %3
  %21 = load i32*, i32** %7, align 8
  %22 = call i32 @dso_json_obj_del(i32* %21)
  br label %23

23:                                               ; preds = %20, %3
  %24 = load i32, i32* %9, align 4
  ret i32 %24
}

declare dso_local i32* @dso_json_str_new_from_num(i32) #1

declare dso_local i32* @dso_json_str_new_from_str(i8*) #1

declare dso_local i32 @dso_json_dict_insert_key_obj(i32*, i32*, i32*) #1

declare dso_local i32 @dso_json_obj_del(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
